# zikos

./: .coveragerc  .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AUDIO_ANALYSIS_TOOLS.md  BUGS.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT.md  Dockerfile  FUTURE_FEATURES.md  IMPLEMENTATION_NOTES.md  MODEL_RECOMMENDATIONS.md  Makefile  README.md  SYSTEM_PROMPT copy.md  SYSTEM_PROMPT.md  TEST_COVERAGE.md  TOOLS.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  test-output.txt  todo.txt  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
backend/zikos/: config.py  constants.py  main.py  todo.txt
backend/zikos/api/: __init__.py  audio.py  chat.py  debug.py  midi.py  system.py
backend/zikos/mcp/: server.py  tool.py  tool_registry.py
backend/zikos/mcp/tools/: __init__.py  base.py  chord_progression.py  ear_trainer.py  metronome.py  midi.py  practice_timer.py  recording.py  tempo_trainer.py  tuner.py
backend/zikos/mcp/tools/analysis/: __init__.py  music_flamingo.py
backend/zikos/mcp/tools/audio/: __init__.py  analysis.py  articulation.py  audio_collection.py  chords.py  comparison.py  comprehensive.py  dynamics.py  groove.py  instrument_detector.py  key.py  phrase_segmentation.py  pitch.py  repetition.py  rhythm.py  segmentation.py  tempo.py  timbre.py  time_stretch.py  utils.py
backend/zikos/mcp/tools/interaction/: __init__.py
backend/zikos/mcp/tools/processing/: __init__.py
backend/zikos/mcp/tools/settings/: __init__.py  settings_tools.py
backend/zikos/mcp/tools/system/: __init__.py  system_collection.py
backend/zikos/services/: audio.py  audio_preprocessing.py  chat.py  llm.py  llm_init.py  midi.py  model_strategy.py  tool_provider.py  user_settings.py
backend/zikos/services/llm_backends/: __init__.py  base.py  cloud.py  llama_cpp.py  transformers.py
backend/zikos/services/llm_orchestration/: __init__.py  audio_context_enricher.py  conversation_manager.py  message_preparer.py  orchestrator.py  response_validator.py  stream_processor.py  thinking_extractor.py  tool_call_parser.py  tool_executor.py  tool_injector.py
backend/zikos/services/prompt/: __init__.py  builder.py
backend/zikos/services/prompt/sections/: __init__.py  audio_context.py  base.py  core.py  (+3 more)
backend/zikos/services/tool_providers/: __init__.py  openai.py  qwen.py  qwen_tool_provider.py  simplified_tool_provider.py  structured_tool_provider.py  xml_tool_provider.py
backend/zikos/utils/: __init__.py  context_length.py  gpu.py  model_recommendations.py  token_budget.py
coverage/: coverage-final.json  index.html
coverage/src/: app.ts.html  config.ts.html  index.html  types.ts.html  ui.ts.html  websocket.ts.html
coverage/src/widgets/: chordProgression.ts.html  earTrainer.ts.html  index.html  index.ts.html  metronome.ts.html  practiceTimer.ts.html  recording.ts.html  tempoTrainer.ts.html  tuner.ts.html
frontend/: index.html
frontend/src/: app.ts  config.ts  types.ts  ui.ts  websocket.ts
frontend/src/widgets/: chordProgression.ts  earTrainer.ts  index.ts  metronome.ts  practiceTimer.ts  recording.ts  setup.ts  tempoTrainer.ts  tuner.ts
frontend/tests/: setup.ts
scripts/: download_model.py  generate_system_prompt_cache.py  setup_env.ps1  setup_env.sh  show_system_prompt.py
self_docuentation/: CONFIGURATION.md  COVERAGE_STRATEGY.md  CPU_MODEL_RECOMMENDATIONS.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  IMPLEMENTATION_NOTES.md  MOCK_ANALYSIS.md  MODEL_RECOMMENDATIONS.md  MUSIC_FLAMINGO_MIGRATION.md  PROMPT_CONDENSATION_ANALYSIS.md  TEST_ISSUES_ANALYSIS.md  TOKEN_OVERFLOW_DIAGNOSTICS.md  TOOLS.md
src/zikos/: _version.py  config.py  main.py
src/zikos/api/: __init__.py  audio.py  chat.py  midi.py
src/zikos/mcp/: __init__.py  server.py
src/zikos/mcp/tools/: __init__.py  audio.py  midi.py  midi_parser.py
src/zikos/services/: audio.py  chat.py  llm.py  midi.py
static/: app.test.js  index.html
static/src/: app.test.ts  app.ts
tests/: conftest.py
tests/comprehensive/: test_llm_backend_streaming.py
tests/frontend/: app.test.ts  config.test.ts  ui.test.ts  websocket.test.ts
tests/frontend/widgets/: chordProgression.test.ts  earTrainer.test.ts  metronome.test.ts  practiceTimer.test.ts  recording.test.ts  tempoTrainer.test.ts  tuner.test.ts
tests/helpers/: __init__.py  audio_synthesis.py  fake_backend.py
tests/integration/: test_api.py  test_audio_api.py  test_audio_tools_integration.py  test_audio_upload_full.py  test_chat_api.py  test_llm_integration.py  test_llm_tool_calling.py  test_mcp_tool_calling.py  test_midi_api.py  test_midi_integration.py  test_music21_integration.py
tests/unit/: test_api_audio.py  test_api_chat.py  test_api_chat_streaming.py  test_api_midi.py  test_api_system.py  test_articulation.py  test_audio_context_enricher.py  test_audio_preprocessing.py  test_audio_service.py  test_audio_tools.py  test_chat_service.py  test_chat_streaming.py  test_chord_detection.py  test_cloud_backend.py  test_comprehensive.py  test_config.py  test_context_optimization.py  test_conversation_manager.py  test_dynamics.py  test_groove.py  test_instrument_detector.py  test_key_detection.py  test_llm_backend_streaming.py  test_llm_service.py  test_llm_streaming.py  test_main.py  test_mcp_server.py  test_mcp_tools.py  test_message_preparer.py  test_midi_parser.py  test_midi_service.py  test_midi_tools.py  test_model_strategy.py  test_music_flamingo_tool.py  test_orchestrator.py  test_phrase_segmentation.py  test_recording_tools.py  test_repetition.py  test_response_validator.py  test_segmentation.py  (+11 more)
tests/unit/utils/: test_context_length.py  test_model_recommendations.py
(+35 files in other folders)
