[project]
name = "zikos"
version = "0.1.0"
description = "AI Music Teacher POC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "music21>=9.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pyfluidsynth>=1.3.0",
    "pyrubberband>=0.3.0",
    "tiktoken>=0.5.0",
]


# [tool.setuptools_scm]
# write_to = "backend/zikos/_version.py"
# Using static version for now - can enable setuptools_scm later if needed


[project.optional-dependencies]
# Heavy ML libraries (excluded from lightweight installs)
ml = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "llama-cpp-python>=0.2.0",
]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "pip-tools>=7.3.0",
]
# Model download helpers (optional, for downloading models)
model-download = [
    "huggingface-hub>=0.20.0",  # Recommended for model downloads
    "requests>=2.31.0",  # Fallback for model downloads
]

# Lightweight dependencies for CI (base deps + dev tools, excludes heavy ML libraries)
lightweight = [
    "httpx>=0.24.0",  # Required for FastAPI TestClient
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zikos"]

[tool.setuptools.package-dir]
"" = "backend"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "F401",  # unused imports (pytest is used as decorator)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F401",  # pytest, unittest.mock, etc. are used but may appear unused
    "F811",  # redefined imports in fixtures
]

[tool.ruff.lint.isort]
known-first-party = ["zikos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp.*",
    "librosa.*",
    "music21.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scripts.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend/zikos",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=75",
    "-v",
    "-m", "not comprehensive and not integration",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "comprehensive: Comprehensive tests that require significant resources (LLM models, heavy audio processing, or long runtime)",
    "lightweight: Tests that don't require heavy dependencies",
]
asyncio_mode = "auto"
filterwarnings = [
    # Third-party library warnings that we cannot fix without changing libraries
    # audioread library imports deprecated Python modules (aifc, audioop, sunau) - library issue
    "ignore::DeprecationWarning:audioread",
    # librosa uses deprecated __audioread_load when PySoundFile fails - librosa internal issue
    "ignore::FutureWarning:librosa.core.audio",
    # PySoundFile fallback is expected when soundfile C library unavailable - informational only
    "ignore:PySoundFile failed:UserWarning",
    # LlamaModel cleanup issue in llama-cpp-python - third-party bug we cannot fix
    "ignore::pytest.PytestUnraisableExceptionWarning:llama_cpp",
]

[tool.coverage.run]
source = ["backend/zikos"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "backend/zikos/services/llm.py",  # LLM tests are comprehensive and excluded from CI
    # LLM backends only tested in comprehensive tests (require real models and good hardware)
    "backend/zikos/services/llm_backends/transformers.py",
    "backend/zikos/services/llm_backends/llama_cpp.py",
    "backend/zikos/services/llm_backends/__init__.py",
    # GPU utils are environment-specific and hard to test in CI
    "backend/zikos/utils/gpu.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
